--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,14 +14,23 @@
         max-width: 100%;
         max-height: 100vh;
         margin: auto;
+        
+    }
+    .center {
+        text-align: center;
+        border: 3px solid green;
     }
   </style>
     <title>Index</title>
     
 </head>
 <body>
+  <div class="center">
+    <h1>{{num_faces}} faces Detected</h1>
+</div>
   <div class="imgbox">
     <img class="center-fit" src="{{ user_image }}" alt="User Image">
   </div>
+  
 </body>
 </html>
